# Mirinae-Android

./: .gitignore  .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts  vcpkg.json  vcpkg_install.bat  vcpkg_install.command
app/src/androidTest/java/com/example/mirinaeandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore  CMakeLists.txt  filesys.cpp  filesys.hpp  main.cpp  vcpkg_install.bat
app/src/main/java/com/example/mirinaeandroid/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/mirinaeandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
